Correçoes no motorista
