# swagger/openapi.yaml
@@ -107,16 +107,34 @@ paths:
             type: 'string'
       responses:
         '200':
+          description: 'O Motorista'
           content:
             application/json:
               schema:
                 type: 'object'
                 properties:
-                  motorista:
-                    description: 'Um Motorista'
+                  motorista:                    
                     $ref: '#/components/schemas/Motorista'
+        '400':
+          description: 'Motorista não existe'
+          content:
+            application/json:
+              schema:
+                type: 'object'
+                properties:
+                  error:
+                    type: 'string'
+                    description: 'Descrição do erro'
         '500':
           description: 'Server error'
+          content:
+            application/json:
+              schema:
+                type: 'object'
+                properties:
+                  error:
+                    type: 'string'
+                    description: 'Descrição do erro'
         default:
           description: 'Unexpected error'
     put:
@@ -149,17 +167,26 @@ paths:
                   type: 'boolean'
                   description: 'Receber email marketing'
       responses:
-        '200':
+        responses:
+        '201':
+          description: 'O Motorista'
           content:
             application/json:
               schema:
                 type: 'object'
                 properties:
-                  motorista:
-                    description: 'Um Motorista'
+                  motorista:                    
                     $ref: '#/components/schemas/Motorista'
         '500':
           description: 'Server error'
+          content:
+            application/json:
+              schema:
+                type: 'object'
+                properties:
+                  error:
+                    type: 'string'
+                    description: 'Descrição do erro'
         default:
           description: 'Unexpected error'
     delete:
@@ -176,9 +203,27 @@ paths:
             type: 'string'
       responses:
         '200':
-          description: 'Motorista deletado'                    
+          description: 'Motorista deletado'          
+        '400':
+          description: 'Motorista não existe'
+          content:
+            application/json:
+              schema:
+                type: 'object'
+                properties:
+                  error:
+                    type: 'string'
+                    description: 'Descrição do erro'
         '500':
           description: 'Server error'
+          content:
+            application/json:
+              schema:
+                type: 'object'
+                properties:
+                  error:
+                    type: 'string'
+                    description: 'Descrição do erro'
         default:
           description: 'Unexpected error'
   /motoristas:
@@ -189,18 +234,26 @@ paths:
       description: 'Obtem a lista de motoristas cadastrados no aplicativo'
       responses:
         '200':
+          description: 'Lista de motoristas'
           content:
             application/json:
               schema:
                 type: 'object'
                 properties:
                   motoristas:
-                    description: 'Uma lista de Motoristas'
                     type: 'array'
                     items:
                       $ref: '#/components/schemas/Motorista'
         '500':
           description: 'Server error'
+          content:
+            application/json:
+              schema:
+                type: 'object'
+                properties:
+                  error:
+                    type: 'string'
+                    description: 'Descrição do erro'
         default:
           description: 'Unexpected error'
   /motorista/:
@@ -231,16 +284,34 @@ paths:
                 - email
       responses:
         '201':
+          description: 'O Motorista'
           content:
             application/json:
               schema:
                 type: 'object'
                 properties:
-                  motorista:
-                    description: 'Um Motorista'
+                  motorista:                    
                     $ref: '#/components/schemas/Motorista'
+        '400':
+          description: 'Dados de entrada errado'
+          content:
+            application/json:
+              schema:
+                type: 'object'
+                properties:
+                  error:
+                    type: 'string'
+                    description: 'Descrição do erro'
         '500':
           description: 'Server error'
+          content:
+            application/json:
+              schema:
+                type: 'object'
+                properties:
+                  error:
+                    type: 'string'
+                    description: 'Descrição do erro'
         default:
           description: 'Unexpected error'
   /motorista/{id_motorista}/viagem/{id_viagem}:
@@ -275,7 +346,8 @@ paths:
               required:
                 - valor
       responses:
-        '200':
+        '201':
+          description: 'Viagem aceita'
           content:
             application/json:
               schema:
@@ -291,8 +363,26 @@ paths:
                     type: 'object'
                     $ref: '#/components/schemas/Viagem'
                     description: 'Viagem aceita'
+        '400':
+          description: 'Dados de entrada incorreto'
+          content:
+            application/json:
+              schema:
+                type: 'object'
+                properties:
+                  error:
+                    type: 'string'
+                    description: 'Descrição do erro'
         '500':
           description: 'Server error'
+          content:
+            application/json:
+              schema:
+                type: 'object'
+                properties:
+                  error:
+                    type: 'string'
+                    description: 'Descrição do erro'
         default:
           description: 'Unexpected error'
   # Passageiros
